Improve doc and Invoice behaviour (big commit)

--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -38,35 +38,35 @@
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Lastname)
   </th>
   <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].Society)
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Company)
   </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressStreet)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressCity)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressCountry)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].Phone)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].Email)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].Birthdate)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].IsUnemployed)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].IsStudent)
-  </th>
-  <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].PeopleWithDisabilities)
-  </th>
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressStreet) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressCity) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressCountry) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].Phone) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].Email) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].Birthdate) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].IsUnemployed) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].IsStudent) -->
+  <!-- </th> -->
+  <!-- <th> -->
+  <!--   @Html.DisplayNameFor(model => model.AbstractEntities[0].PeopleWithDisabilities) -->
+  <!-- </th> -->
 
   <th>
     Articles
