--- a/Pages/Customer/_ShowAllTbody.cshtml
+++ b/Pages/Customer/_ShowAllTbody.cshtml
@@ -11,35 +11,35 @@
   @Html.DisplayFor(modelItem => item.Lastname)
 </td>
 <td>
-  @Html.DisplayFor(modelItem => item.Society)
+  @Html.DisplayFor(modelItem => item.Company)
 </td>
-<td>
-  @Html.DisplayFor(modelItem => item.AddressStreet)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.AddressCity)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.AddressCountry)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.Phone)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.Email)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.Birthdate)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.IsUnemployed)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.IsStudent)
-</td>
-<td>
-  @Html.DisplayFor(modelItem => item.PeopleWithDisabilities)
-</td>
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.AddressStreet) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.AddressCity) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.AddressCountry) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.Phone) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.Email) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.Birthdate) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.IsUnemployed) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.IsStudent) -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   @Html.DisplayFor(modelItem => item.PeopleWithDisabilities) -->
+<!-- </td> -->
 <td>
   <ol>
     @foreach (Article article in item.CurrentlyBorrowed)
