--- a/Pages/Customer/_DetailsPartialView.cshtml
+++ b/Pages/Customer/_DetailsPartialView.cshtml
@@ -14,10 +14,10 @@
     @Html.DisplayFor(model => model.Lastname)
 </dd>
 <dt class="col-sm-2">
-    @Html.DisplayNameFor(model => model.Society)
+    @Html.DisplayNameFor(model => model.Company)
 </dt>
 <dd class="col-sm-10">
-    @Html.DisplayFor(model => model.Society)
+    @Html.DisplayFor(model => model.Company)
 </dd>
 <dt class="col-sm-2">
     @Html.DisplayNameFor(model => model.AddressStreet)
