--- a/wwwroot/styles/customer-create-edit.css
+++ b/wwwroot/styles/customer-create-edit.css
@@ -20,7 +20,7 @@ select[name='articleLoanDuration'] {
 
 .grid-container-article-loan-duration {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: auto auto auto;
   grid-template-rows:    auto;
 }
 
